--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-icons": "^1.13.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "firebase": "^12.6.0",
     "mssql": "^12.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
